Fix contrast

--- a/src/css/vars.less
+++ b/src/css/vars.less
@@ -13,7 +13,7 @@
   --palette-primary: #1976d2;
   --palette-primary-dark: #004ba0;
 
-  --palette-primary-contrast: #ecedef;
+  --palette-primary-contrast: var(--white);
 
   --palette-border: #aaaaaa;
 
